--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "dev": "concurrently \"npm run server\" \"npm run client\"",
     "server": "node server/index.js",
     "client": "vite",
-    "build": "vite build"
+    "build": "vite build",
+    "vercel-build": "vite build"
   },
   "dependencies": {
     "express": "^4.18.2",
