--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "server": "node server/index.js",
     "client": "vite",
     "build": "vite build",
-    "vercel-build": "vite build"
+    "start": "node server/index.js"
   },
   "dependencies": {
     "express": "^4.18.2",
